src/test/ui/mismatched_types/closure-arg-type-mismatch.stderr
error[E0631]: type mismatch in closure arguments
  --> $DIR/closure-arg-type-mismatch.rs:3:18
   |
LL |     a.iter().map(|_: (u32, u32)| 45);
   |              --- ---------------^^^
   |              |   |
   |              |   expected due to this
   |              |   found signature defined here
   |              required by a bound introduced by this call
   |
   = note: expected closure signature `fn(&(u32, u32)) -> _`
              found closure signature `fn((u32, u32)) -> _`
note: required by a bound in `map`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |         F: FnMut(Self::Item) -> B,
   |            ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `map`

error[E0631]: type mismatch in closure arguments
  --> $DIR/closure-arg-type-mismatch.rs:4:18
   |
LL |     a.iter().map(|_: &(u16, u16)| 45);
   |              --- ----------------^^^
   |              |   |
   |              |   expected due to this
   |              |   found signature defined here
   |              required by a bound introduced by this call
   |
   = note: expected closure signature `fn(&(u32, u32)) -> _`
              found closure signature `for<'r> fn(&'r (u16, u16)) -> _`
note: required by a bound in `map`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |         F: FnMut(Self::Item) -> B,
   |            ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `map`

error[E0631]: type mismatch in closure arguments
  --> $DIR/closure-arg-type-mismatch.rs:5:18
   |
LL |     a.iter().map(|_: (u16, u16)| 45);
   |              --- ---------------^^^
   |              |   |
   |              |   expected due to this
   |              |   found signature defined here
   |              required by a bound introduced by this call
   |
   = note: expected closure signature `fn(&(u32, u32)) -> _`
              found closure signature `fn((u16, u16)) -> _`
note: required by a bound in `map`
  --> $SRC_DIR/core/src/iter/traits/iterator.rs:LL:COL
   |
LL |         F: FnMut(Self::Item) -> B,
   |            ^^^^^^^^^^^^^^^^^^^^^^ required by this bound in `map`

error: aborting due to 3 previous errors

For more information about this error, try `rustc --explain E0631`.
